objects/zqu__QuoteRatePlanCharge__c.object
<CustomObject>
    <description>A QuoteRatePlanCharge, like QuoteRatePlan, is part of a Quote.</description>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <formula>zqu__TCV__c *  zqu__Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NbLicenses__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Contains the number of users for the Solar module</description>
        <inlineHelpText>Contains the number of users for the Solar module</inlineHelpText>
        <label>Nb Licenses</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductSKU__c</fullName>
        <formula>zqu__QuoteRatePlan__r.zqu__ProductRatePlan__r.zqu__Product__r.zqu__SKU2__c</formula>
        <label>Product SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOLMaxUsersDefaultValue__c</fullName>
        <formula>IF(zqu__QuoteRatePlan__r.zqu__Quote__r.Nb_MW__c &lt; 12, 15  , IF(zqu__QuoteRatePlan__r.zqu__Quote__r.Nb_MW__c &gt; 80, 40, 25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOL Max Users Default Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Discount_is_here__c</fullName>
        <formula>TEXT(zqu__QuoteRatePlan__r.zqu__ProductRatePlan__r.zqu__Product__r.ZType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Discount is here</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Apply_Discount_To_One_Time_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To One Time Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Apply_Discount_To_Recurring_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To Recurring Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Apply_Discount_To_Usage_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To Usage Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__BillCycleDay__c</fullName>
        <description>Bill Cycle Day of RatePlan Charge</description>
        <label>Bill Cycle Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__BillCycleType__c</fullName>
        <label>Bill Cycle Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DefaultFromCustomer</fullName>
                </value>
                <value>
                    <fullName>SpecificDayofMonth</fullName>
                </value>
                <value>
                    <fullName>SubscriptionStartDay</fullName>
                </value>
                <value>
                    <fullName>ChargeTriggerDay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__BillingDiscount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__BillingPeriodAlignment__c</fullName>
        <label>Billing Period Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AlignToCharge</fullName>
                </value>
                <value>
                    <fullName>AlignToSubscriptionStart</fullName>
                </value>
                <value>
                    <fullName>AlignToTermStart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__BillingSubtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__BillingTax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__BillingTiming__c</fullName>
        <label>Billing Timing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Advance</fullName>
                </value>
                <value>
                    <fullName>In Arrears</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__BillingTotal__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ChargeNumber__c</fullName>
        <label>Charge Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ChargeOverrideReferenceId__c</fullName>
        <description>The Id of another Quote Rate Plan Charge in the order that this charge is acting on.</description>
        <label>Charge Override Reference Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ChargeType__c</fullName>
        <label>Charge Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountMRR__c</fullName>
        <description>Delta Discount MRR value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta Discount MRR value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCBTax__c</fullName>
        <description>Tax on Delta Discount TCB retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Tax on Delta Discount TCB retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCB__c</fullName>
        <description>Delta Discount TCB value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta Discount TCB value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCV__c</fullName>
        <description>Delta Discount TCV value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta Discount TCV value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaMRR__c</fullName>
        <description>Delta MRR value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>Delta MRR value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>Delta MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCBTax__c</fullName>
        <description>Tax on Delta TCB returned from previewing the Quote in Zuora</description>
        <inlineHelpText>Tax on Delta TCB returned from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCB__c</fullName>
        <description>Delta TCB value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta TCB value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCV__c</fullName>
        <description>Delta TCV value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>Delta TCV value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>Delta TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zqu__DiscountAmount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DiscountPercentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Discount_Level__c</fullName>
        <label>Discount Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RatePlan</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveEndDate__c</fullName>
        <description>The effective end date of the charge.</description>
        <inlineHelpText>The effective end date of the charge.</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__EffectivePrice__c</fullName>
        <label>Effective Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveStartDate__c</fullName>
        <description>The effective start date of the charge.</description>
        <inlineHelpText>The effective start date of the charge.</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__EndDateCondition__c</fullName>
        <label>End Date Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription End Date</fullName>
                </value>
                <value>
                    <fullName>Fixed Period</fullName>
                </value>
                <value>
                    <fullName>Specific End Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__EntityID__c</fullName>
        <formula>zqu__QuoteRatePlan__r.zqu__EntityID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__FeeType__c</fullName>
        <label>FeeType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
                <value>
                    <fullName>n/a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__IncludedUnits__c</fullName>
        <label>Included Units</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__IsLastSegment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag that determines whether the existing Quote Rate Plan Charge belongs to the latest segment.</description>
        <inlineHelpText>A flag that determines whether the existing Quote Rate Plan Charge belongs to the latest segment.</inlineHelpText>
        <label>Is Last Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__ListPriceBase__c</fullName>
        <label>List Price Base</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Month</fullName>
                </value>
                <value>
                    <fullName>Per Billing Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__ListPrice__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ListTotal__c</fullName>
        <label>List Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__MRR__c</fullName>
        <inlineHelpText>Monthly Recurring Revenue</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Model__c</fullName>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__PreviewedMRR__c</fullName>
        <description>MRR value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>MRR value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__PreviewedTCV__c</fullName>
        <description>TCV value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>TCV value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__PriceChangeOption__c</fullName>
        <label>Price Change Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NoChange</fullName>
                </value>
                <value>
                    <fullName>SpecificPercentageValue</fullName>
                </value>
                <value>
                    <fullName>UseLatestProductCatalogPricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__PriceIncreasePercentage__c</fullName>
        <label>Price Increase Percentage</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ProductName__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanChargeZuoraId__c</fullName>
        <description>corresponding Id with Product Catalog on remote zuora server</description>
        <label>Product Rate Plan Charge Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Quote Rate Plan Charge associated with a Product Rate Plan Charge.</description>
        <label>Product Rate Plan Charge</label>
        <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charges</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlanChargeFullName__c</fullName>
        <label>Full Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlanChargeZuoraId__c</fullName>
        <description>corresponding Id on remote zuora server</description>
        <externalId>true</externalId>
        <label>Quote Rate Plan Charge Zuora Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlan__c</fullName>
        <description>The identification of the rate plan that this charge applies to.</description>
        <label>Quote Rate Plan</label>
        <referenceTo>zqu__QuoteRatePlan__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charges</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__RatePlanName__c</fullName>
        <label>Rate Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__RatingGroup__c</fullName>
        <label>Rating Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ByBillingPeriod</fullName>
                </value>
                <value>
                    <fullName>ByUsageStartDate</fullName>
                </value>
                <value>
                    <fullName>ByUsageRecord</fullName>
                </value>
                <value>
                    <fullName>ByUsageUpload</fullName>
                </value>
                <value>
                    <fullName>ByGroupId</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Segment__c</fullName>
        <label>Segment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__SpecificBillingPeriod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Customizes the number of month for the charges billing period. This field is required if you set the value of the BillingPeriod field to Specific Months.</description>
        <label>Specific Billing Period</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__SpecificEndDate__c</fullName>
        <description>The specific date on which the charge ends.</description>
        <inlineHelpText>The specific date on which the charge ends.</inlineHelpText>
        <label>Specific End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Status__c</fullName>
        <description>The status of the charge. If the status is Original, the charge will not be included in the Order request.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionRatePlanChargeZuoraId__c</fullName>
        <description>The identification number of the subscription rate plan charge that the amendment is modifying. Required if AmendmentType is set to UpdateProduct.</description>
        <label>Subscription Rate Plan Charge Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__TCV__c</fullName>
        <inlineHelpText>Total Contract Value</inlineHelpText>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__TriggerDate__c</fullName>
        <description>The date when the charge becomes effective, and billing begins. This field is required if the TriggerEvent field value is SpecificDate.</description>
        <inlineHelpText>The date when the charge becomes effective, and billing begins.</inlineHelpText>
        <label>Trigger Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__TriggerEvent__c</fullName>
        <label>Trigger Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ContractEffective</fullName>
                </value>
                <value>
                    <fullName>ServiceActivation</fullName>
                </value>
                <value>
                    <fullName>CustomerAcceptance</fullName>
                </value>
                <value>
                    <fullName>SpecificDate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__UOM__c</fullName>
        <label>UOM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Upto_How_Many_Periods_Type__c</fullName>
        <description>Determines the period type used to define when the charge ends</description>
        <label>Up To Periods Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Periods</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Upto_How_Many_Periods__c</fullName>
        <label>Up To How Many Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__WeeklyBillCycleDay__c</fullName>
        <description>Specifies which day of the week as the bill cycle day (BCD) for the charge.</description>
        <label>Weekly Bill Cycle Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote Rate Plan Charge</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Rate Plan Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SOLModifyNbLicensesCheck</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp; 
TEXT(zqu__QuoteRatePlan__r.zqu__ProductRatePlan__r.zqu__Product__r.Entity__c) = &apos;SOL&apos; &amp;&amp; 
TEXT(zqu__QuoteRatePlan__r.zqu__ProductRatePlan__r.zqu__Product__r.AllowModifyLicenses__c) = &apos;No&apos; &amp;&amp; 
ISCHANGED(NbLicenses__c)</errorConditionFormula>
        <errorMessage>You can change the &apos;Nb Licenses&apos; field only for Standard Features and Selected Options!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UpdDiscountForRegularQuoteNotAllowed</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp; 
AND(TEXT(zqu__QuoteRatePlan__r.zqu__Quote__r.Entity__c)  &lt;&gt; &apos;DNA&apos;,
    TEXT(zqu__QuoteRatePlan__r.zqu__Quote__r.Type__c) = &apos;Regular&apos;,
    zqu__Model__c = &apos;Discount-Percentage&apos;, 
    ISCHANGED(zqu__EffectivePrice__c))</errorConditionFormula>
        <errorMessage>Discount cannot be manually changed for a Regular Quote.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Quantity_must_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>zqu__Quantity__c &lt; 0</errorConditionFormula>
        <errorDisplayField>zqu__Quantity__c</errorDisplayField>
        <errorMessage>Quantity must be greater than 0</errorMessage>
    </validationRules>
</CustomObject>